<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_host"></string>
    <string name="app_name">阔知学堂</string>
    <string name="api_version">2.1.0</string>
    <string name="apk_version">2.6.1</string>
    <string name="apk_code">13</string>
    <string name="splash_num">0</string>
    <string name="splash_padding">0.3</string>

    <string name="recomemnd_course_str">推荐课程</string>
    <string name="school_about">关于网校</string>
    <string name="menu_more_str">更多</string>
    <string name="add_school_str">添加网校</string>
    <string name="exit_str">退出</string>
    <string name="setting_str">设置</string>
    <string name="search_str">搜索</string>
    <string name="search_alt_str">输入网校地址</string>
    <string name="my_sch_str">我收藏的网校</string>
    <string name="login_qr_btn">二维码登录</string>
    <string name="course_details_menu_more">更多</string>
    <string name="testpaper_menu_card">答题卡</string>
    <string name="found_menu">搜索</string>
    <string name="reply_submit">提交</string>
    <string name="found_live">直播</string>
    <string name="found_classroom">班级</string>
    <string name="found_video">点播</string>
    <string name="down_tab_school">学堂</string>
    <string name="down_tab_recommend">推荐</string>
    <string name="down_tab_found">发现</string>
    <string name="down_tab_me">我</string>
    <string name="title_school">学堂</string>
    <string name="title_me">我</string>
    <string name="title_found">全部</string>
    <string name="title_recommend">推荐</string>

    <string-array name="exitcourse_array">
        <item>老师服务态度不好</item>
        <item>课程内容质量差</item>
        <item>其他</item>
    </string-array>

    <string-array name="offline_array">
        <item>仅wifi</item>
        <item>仅wifi,3G/4G</item>
        <item>从不</item>
    </string-array>

    <!-- icon font -->
    <string name="search"></string>
    <string name="angle_left"></string>
    <string name="font_close"></string>
    <string name="font_cancel"></string>
    <string name="font_learning"></string>
    <string name="font_user"></string>
    <string name="font_angle_right"></string>
    <string name="font_cloud"></string>
    <string name="font_picture"></string>
    <string name="font_textpaper"></string>
    <string name="font_play"></string>
    <string name="font_microphone"></string>
    <string name="font_menu_btn"></string>
    <string name="font_unlock"></string>
    <string name="font_email"></string>
    <string name="font_heart"></string>
    <string name="font_refresh"></string>
    <string name="font_message"></string>
    <string name="font_empty"></string>
    <string name="font_qr"></string>
    <string name="font_home"></string>
    <string name="font_play_btn"></string>
    <string name="font_pause_btn"></string>
    <string name="font_loading_btn"></string>
    <string name="font_search_btn"></string>
    <string name="font_check_btn"></string>
    <string name="unpublished_text">未发布</string>
    <string name="font_list"></string>

    <string name="schoolroom">&#xe6ba;</string>
    <string name="schoolroom_press">&#xe6b9;</string>
    <string name="font_me">&#xe636;</string>
    <string name="font_me_press">&#xe637;</string>
    <string name="font_recommend">&#xe634;</string>
    <string name="font_recommend_press">&#xe635;</string>
    <string name="font_found">&#xe632;</string>
    <string name="font_found_press">&#xe633;</string>
    <string name="font_clear">&#xe63d;</string>
    <string name="font_right"></string>
    <string name="font_ppt">&#xe655;</string>
    <string name="font_document">&#xe654;</string>
    <string name="font_image">&#xe652;</string>
    <string name="font_video">&#xe651;</string>
    <string name="font_audio">&#xe653;</string>
    <string name="font_other">&#xe652;</string>
    <string name="font_vip">&#xe65d;</string>
    <string name="font_download">&#xe690;</string>
    <string name="font_collection">&#xe638;</string>
    <string name="font_notification">&#xe65b;</string>
    <string name="font_setting">&#xe68f;</string>
    <string name="font_feedback">&#xe6b3;</string>
    <string name="font_add_fans">&#xe69e;</string>

    <!--lesson tools -->
    <string name="learned_status">&#xe657;</string>
    <string name="course_paybtn">&#xe68b;</string>
    <string name="learning_status">&#xe656;</string>
    <string name="learn_note">&#xe624;</string>
    <string name="learn_question">&#xe67b;</string>
    <string name="learn_more">&#xe6a6;</string>
    <string name="lesson_next">&#xe688;</string>
    <string name="lesson_previous">&#xe687;</string>

    <!-- base font -->
    <string name="font_search_clear">&#xe683;</string>
    <string name="font_favorited">&#xe639;</string>
    <string name="font_favoirte">&#xe638;</string>
    <string name="font_search">&#xe64b;</string>
    <string name="font_more">&#xe6a6;</string>
    <string name="font_expand">&#xe63a;</string>
    <string name="font_btn_learning">&#xe671;</string>
    <string name="font_btn_finish">&#xe672;</string>
    <string name="app_id">wx91c11946311906a3</string>

    <!-- schoolroom -->
    <string name="schoolroom_live">&#xe6bc;</string>
    <string name="schoolroom_course">&#xe645;</string>
    <string name="schoolroom_question">&#xe6ae;</string>
    <string name="schoolroom_discussion">&#xe646;</string>
    <string name="schoolroom_note">&#xe6ad;</string>
    <string name="schoolroom_letter">&#xe693;</string>

    <!-- 网校提示字符 -->
    <string name="testpaper_reviewing">请耐心等待老师批阅，老师批阅后可查看全部考试结果</string>
    <string name="course_no_teacher">该课程尚未设置教师</string>
    <string name="course_no_review">还没有评价哦~</string>
    <string name="app_code">edusoho</string>

    <string name="show_live_in_school_room">0</string>

    <!-- note -->
    <string name="edit_content">编辑</string>
    <string name="note_content">笔记内容</string>

    <string name="bugly_appid">900001729</string>
    <string name="channel_name">baidu</string>

    <!-- v3 -->
    <string name="reg_phone_reg">手机注册</string>
    <string name="reg_mail_reg">邮箱注册</string>
    <string name="reg_send_code">发送验证码</string>
    <string name="login_username_hint">手机号/邮箱/昵称</string>
    <string name="login_password_hint">密码</string>
    <string name="login_line_text">其他方式登录</string>
    <string name="reg_phone_hint">请输入手机号</string>
    <string name="reg_mail_hint">请输入邮箱地址</string>
    <string name="reg_code_hint">请输入验证码</string>
    <string name="reg_password_hint">请输入密码</string>
    <string name="register">注册</string>
</resources>