<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/lesson_tools_layout"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="@drawable/course_details_btn_layout_bg"
        android:layout_width="match_parent"
        android:layout_height="1dp">

        <com.edusoho.kuozhi.view.EduSohoTextBtn
            android:padding="8dp"
            android:orientation="vertical"
            app:iconSizeScale="2.4"
            android:id="@+id/lesson_learn_btn"
            android:layout_weight="1"
            app:fontColor="@color/lesson_tools_sel"
            app:size="@dimen/nav_layout_btn"
            app:image="@string/learning_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.edusoho.kuozhi.view.EduSohoTextBtn
            android:padding="8dp"
            android:orientation="vertical"
            app:iconSizeScale="2.4"
            android:id="@+id/lesson_note_btn"
            android:layout_weight="1"
            app:fontColor="@color/lesson_tools_sel"
            app:size="@dimen/nav_layout_btn"
            app:image="@string/learn_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.edusoho.kuozhi.view.EduSohoTextBtn
            android:padding="8dp"
            android:orientation="vertical"
            app:iconSizeScale="2.4"
            android:id="@+id/lesson_question_btn"
            android:layout_weight="1"
            app:fontColor="@color/lesson_tools_sel"
            app:size="@dimen/nav_layout_btn"
            app:image="@string/learn_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.edusoho.kuozhi.view.EduSohoTextBtn
            android:padding="8dp"
            android:orientation="vertical"
            app:iconSizeScale="2.4"
            android:id="@+id/lesson_more_btn"
            android:layout_weight="1"
            app:fontColor="@color/lesson_tools_sel"
            app:size="@dimen/nav_layout_btn"
            app:image="@string/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:layout_above="@id/lesson_tools_layout"
        android:id="@+id/lesson_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

</RelativeLayout>
