<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_list_background_color">

    <RelativeLayout
        android:id="@+id/myinfo_user_layout"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_marginBottom="1px"
        android:layout_height="wrap_content">

        <com.edusoho.kuozhi.view.plugin.CircularImageView
            android:layout_margin="16dp"
            android:id="@+id/myinfo_logo"
            android:layout_centerVertical="true"
            android:src="@drawable/myinfo_default_face"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <com.edusoho.kuozhi.view.ESTextView
            android:text="名字"
            android:textSize="@dimen/large_font_size"
            android:id="@+id/tv_nickname"
            android:layout_toRightOf="@id/myinfo_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            app:es_alpha="0.87"
            android:layout_alignTop="@id/myinfo_logo" />

        <com.edusoho.kuozhi.view.EduSohoIconView
            android:id="@+id/vip_icon"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_nickname"
            android:layout_alignTop="@id/tv_nickname"
            android:textSize="@dimen/icon_vip"
            android:text="@string/font_vip"
            android:textColor="#fff000" />

        <com.edusoho.kuozhi.view.ESTextView
            android:id="@+id/teacher_title"
            android:text="教师职称"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_font_size"
            android:layout_toRightOf="@+id/vip_icon"
            android:layout_alignBaseline="@+id/tv_nickname" />

        <com.edusoho.kuozhi.view.ESTextView
            app:es_alpha="0.54"
            android:textColor="@android:color/black"
            android:text="个性签名"
            android:singleLine="true"
            android:ellipsize="end"
            android:id="@+id/myinfo_signature"
            android:textSize="@dimen/small_font_size"
            android:paddingTop="10dp"
            android:layout_below="@id/tv_nickname"
            android:layout_toRightOf="@id/myinfo_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <com.edusoho.kuozhi.view.ESTextView
        android:background="@android:color/white"
        android:textSize="@dimen/middle_font_size"
        android:layout_marginBottom="1px"
        android:padding="16dp"
        android:id="@+id/tvIntroduction"
        android:text="自我介绍"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myinfo_user_layout" />

    <RelativeLayout
        android:id="@+id/social_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:layout_below="@id/tvIntroduction">

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ll_followings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.edusoho.kuozhi.view.ESTextView
                android:textSize="@dimen/middle_font_size"
                android:id="@+id/tv_follow_num"
                android:text="关注数"
                android:textColor="@android:color/black"
                app:es_alpha="0.87"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.edusoho.kuozhi.view.ESTextView
                android:textSize="@dimen/small_font_size"
                android:text="关注"
                android:textColor="@android:color/black"
                app:es_alpha="0.54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/ll_followers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toRightOf="@id/ll_followings"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.edusoho.kuozhi.view.ESTextView
                android:textSize="@dimen/middle_font_size"
                android:id="@+id/tv_fans_num"
                android:text="粉丝数"
                android:textColor="@android:color/black"
                app:es_alpha="0.87"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.edusoho.kuozhi.view.ESTextView
                android:textSize="@dimen/small_font_size"
                android:text="粉丝"
                android:textColor="@android:color/black"
                app:es_alpha="0.54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/message"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/add_concern">

            <com.edusoho.kuozhi.view.EduSohoIconView
                android:textSize="24sp"
                android:textColor="@color/base_color_normal"
                android:text="@string/font_feedback"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/middle_font_size"
                android:textColor="@color/base_color_normal"
                android:gravity="center_vertical"
                android:text="发私信"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:id="@+id/add_concern"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <com.edusoho.kuozhi.view.EduSohoIconView
                android:textSize="24sp"
                android:text="@string/font_add_fans"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/middle_font_size"
                android:text="关注"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>

    <com.edusoho.kuozhi.view.ESTextView
        android:id="@+id/description"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/middle_font_size"
        android:layout_below="@id/social_bar"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        app:es_alpha="0.87"
        android:text="在学课程" />

</RelativeLayout>